--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="update_user_avatar_success">update_user_avatar_success</string>
     <string name="update_user_avatar">update_user_avatar_ing</string>
     <string name="delete_collect_fail">delete collect fail</string>
+    <string name="add_cart_success">add cart success</string>
 </resources>
