新增填写收货地址的Activity及布局文件，点击购买按钮的监听事件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="update_user_avatar">update_user_avatar_ing</string>
     <string name="delete_collect_fail">delete collect fail</string>
     <string name="add_cart_success">add cart success</string>
+    <string name="noting_to_buy">noting_to_buy</string>
 </resources>
