--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -34,4 +34,5 @@
     <string name="update_user_avatar">更新用户头像中...</string>
     <string name="delete_collect_fail">删除收藏失败</string>
     <string name="add_cart_success">成功添加到购物车</string>
+    <string name="noting_to_buy">未选中可购买的商品</string>
 </resources>
